# planetary-computer-tasks

./: .buildinfo  .dockerignore  .env  .flake8  .gitignore  .readthedocs.yaml  CLAUDE.md  Dockerfile.dask  Dockerfile.dev  Dockerfile.stacapi  Dockerfile.stacbrowser  Dockerfile.task_base  README.md  RELEASING.md  SUPPORT.md  _config.yaml  conftest.py  deploying.html  dev-secrets.template.yaml  developing.html  docker-compose.aux.yml  docker-compose.azure-functions.yaml  docker-compose.console.yml  docker-compose.cosmosdb.yml  docker-compose.tasks.yml  docker-compose.yml  func-index.yaml  genindex.html  index.html  index.md  index.yaml  ingest-collection.yaml  mypy.ini  objects.inv  pctasks-server-2022.3.0-dev.tgz  pctasks-server-2023.1.0.tgz  pctasks-server-2023.1.1.tgz  pctasks-server-2023.1.2.tgz  pctasks-server-2023.2.0-dev.tgz  pctasks-server-2023.2.0.tgz  (+32 more)
pctasks/cli/: README.md  dev_requirements.txt  pyproject.toml  requirements.txt  setup.cfg  setup.py
pctasks/cli/pctasks/cli/: __init__.py  cli.py
pctasks/cli/tests/: test_cli.py
pctasks/client/: README.md  dev_requirements.txt  pyproject.toml  requirements.txt  setup.cfg  setup.py
pctasks/client/pctasks/client/: __init__.py  client.py  constants.py  context.py  errors.py  invalid.json  profile.py  settings.py  utils.py
pctasks/client/pctasks/client/profile/: cli.py  commands.py
pctasks/client/pctasks/client/records/: _cli.py  cli.py  render.py  settings.py
pctasks/client/pctasks/client/runs/: _get.py  _list.py  _status.py  cli.py  get.py  list.py  options.py  status.py  utils.py
pctasks/client/pctasks/client/storage/: cli.py  commands.py
pctasks/client/pctasks/client/submit/: _cli.py  cli.py  template.py
pctasks/client/pctasks/client/workflow/: _cli.py  cli.py  commands.py  options.py  template.py
pctasks/client/tests/: test_client.py  test_storage.py  test_template.py
pctasks/client/tests/records/: test_records.py
pctasks/core/: pyproject.toml  requirements.txt  setup.cfg  setup.py
pctasks/core/pctasks/core/: __init__.py  _compat.py  activity.py  cli.py  constants.py  context.py  importer.py  logging.py  message_handler.py  queues.py  settings.py  tokens.py  yaml.py
pctasks/core/pctasks/core/cosmos/: container.py  database.py  page.py  (+2 more)
pctasks/core/tests/: test_activity.py  test_messages.py  test_yaml.py
pctasks/core/tests/cosmos/: test_container.py
pctasks/core/tests/data-files/: planet-nicfi-analytic.json
pctasks/core/tests/models/: test_item.py  test_storage_event.py  test_task.py  test_workflow.py
pctasks/core/tests/storage/: test_async_blob_storage.py  test_blob.py  test_importer.py  test_local.py
pctasks/core/tests/tables/: test_config.py  test_record.py
pctasks/core/tests/utils/: test_backoff.py  test_summary.py  test_template.py  test_utils.py
pctasks/dataset/: README.md  dev_requirements.txt  pyproject.toml  requirements.txt  setup.cfg  setup.py
pctasks/dataset/pctasks/dataset/: __init__.py  _cli.py  cli.py  collection.py  constants.py  models.py  streaming.py  template.py  utils.py  validate.py  workflow.py
pctasks/dataset/tests/: collection.py  test_dataset.py  test_streaming_create_items.py  test_validate_collection.py  test_workflow.py
pctasks/dataset/tests/chunks/: test_cli.py  test_task.py
pctasks/dataset/tests/data-files/: storage-event.json
pctasks/dataset/tests/items/: test_task.py
pctasks/dev/: README.md  dev_requirements.txt  pyproject.toml  requirements.txt  setup.cfg  setup.py
pctasks/dev/pctasks/dev/: __init__.py  azurite.py  blob.py  cli.py  config.py  constants.py  cosmosdb.py  db.py  env.py  k8s.py  local_dev_endpoints.py  local_executor.py  logs.py  mocks.py  queues.py  secrets.py  settings.py  setup_azurite.py  tables.py  task.py  test_utils.py
pctasks/dev/tests/: test_temp_queue.py
pctasks/ingest/: dev_requirements.txt  pyproject.toml  requirements.txt  setup.cfg  setup.py
pctasks/ingest/pctasks/ingest/: __init__.py  _cli.py  cli.py  constants.py  models.py  settings.py  utils.py
pctasks/ingest/tests/: test_collection.py  test_models.py  test_settings.py
pctasks/ingest/tests/data-files/: goes-collection-workflow.yaml
pctasks/ingest_task/: Dockerfile  README.md  dev_requirements.txt  pyproject.toml  requirements.txt  setup.cfg  setup.py
pctasks/ingest_task/pctasks/ingest_task/: __init__.py  collection.py  constants.py  items.py  pgstac.py  pgstac_bak.py  streaming.py  task.py  utils.py
pctasks/ingest_task/tests/: conftest.py  items_document.json  test_collection.py  test_items.py  test_streaming_ingest.py
pctasks/notify/: README.md  pyproject.toml  requirements.txt  setup.cfg  setup.py
pctasks/notify/pctasks/notify/: __init__.py  activities.py  models.py  settings.py
pctasks/notify/tests/: test_process.py
pctasks/run/: Dockerfile  README.md  dev_requirements.txt  pyproject.toml  requirements.txt  setup.cfg  setup.py
pctasks/run/pctasks/run/: __init__.py  _cli.py  cli.py  constants.py  dag.py  errors.py  models.py  records.py  settings.py  template.py  utils.py
pctasks/run/tests/: test_argo_streaming.py  test_dag.py  test_messages.py  test_settings.py  test_template.py
pctasks/run/tests/batch/: test_client.py  test_utils.py
pctasks/run/tests/secrets/: test_base.py
pctasks/run/tests/workflow/: test_kubernetes.py  test_remote.py
pctasks/server/: Dockerfile  README.md  dev_requirements.txt  pyproject.toml  requirements.txt  setup.cfg  setup.py
pctasks/server/helm/pctasks-server/: values.yaml
pctasks/server/pctasks/server/: constants.py  dependencies.py  logging.py  main.py  middleware.py  request.py  settings.py  tracing.py
pctasks/server/tests/: conftest.py  test_request.py
pctasks/server/tests/routes/: test_run.py
pctasks/task/: README.md  pyproject.toml  requirements.txt  setup.cfg  setup.py
pctasks/task/pctasks/task/: __init__.py  _cli.py  cli.py  constants.py  context.py  run.py  settings.py  streaming.py  task.py  utils.py  version.py
pctasks/task/tests/: test_cli.py  test_utils.py
pctasks/task/tests/common/: test_list_files.py  test_list_prefixes.py  test_summarize.py  test_write.py
(+1352 files in other folders)
