[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pctasks.client"
dynamic = ["version"]
description = "Planetary Computer Tasks framework - Client."
readme = "README.md"
license = "MIT"
requires-python = ">=3.8"
authors = [
    { name = "Microsoft", email = "planetarycomputer@microsoft.com" },
]
keywords = [
    "Planetary",
    "STAC",
]
classifiers = [
    "Intended Audience :: Developers",
    "Intended Audience :: Information Technology",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.8",
]
dependencies = [
    "pctasks.core @ {root:uri}/../core",
    "pctasks.cli @ {root:uri}/../cli",
    "pydantic[dotenv]>=1.8,<2.0.0",
    "rich>=11.2.0",
]

[project.optional-dependencies]
dev = [
    "pre-commit",
    "pytest",
    "pytest-cov",
]
docs = [
    "mkdocs",
    "mkdocs-material",
    "pdocs",
]

[project.entry-points."pctasks.commands"]
profile = "pctasks.client.profile.cli:profile_cmd"
runs = "pctasks.client.runs.cli:runs_cmd"
storage = "pctasks.client.storage.cli:storage_cmd"
workflow = "pctasks.client.workflow.cli:workflow_cmd"

[project.urls]
Homepage = "https://github.com/Microsoft/planetary-computer-tasks"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.version]
path = "pctasks/client/version.py"

[tool.hatch.build.targets.wheel]
include = [
    "/pctasks/client",
]
