[metadata]
version = attr: pctasks.client.version.__version__

[options.entry_points]
pctasks.commands =
    workflow = pctasks.client.workflow.cli:workflow_cmd
    runs = pctasks.client.runs.cli:runs_cmd
    profile = pctasks.client.profile.cli:profile_cmd
    storage = pctasks.client.storage.cli:storage_cmd
