[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pctasks.core"
dynamic = ["version"]
description = "Planetary Computer Tasks framework."
readme = "README.md"
license = "MIT"
requires-python = ">=3.8"
authors = [
    { name = "Microsoft", email = "planetarycomputer@microsoft.com" },
]
keywords = [
    "Planetary",
    "STAC",
]
classifiers = [
    "Intended Audience :: Developers",
    "Intended Audience :: Information Technology",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.8",
]
dependencies = [
    "aiohttp>=3.9",
    "azure-cosmos>=4.3.0,<4.4.0",
    "azure-data-tables>=12.0.0,<13",
    "azure-identity>=1.0.0,<2",
    "azure-storage-blob",
    "azure-storage-queue>=12.6.0",
    "idna>=3.7.0",
    "jsonschema>=4.0.1,<4.18",
    "opencensus-ext-azure==1.1.0",
    "opencensus-ext-logging==0.1.1",
    "orjson>=3.0.0,<4",
    "planetary-computer>=0.4.0",
    "pystac==1.8.3",
    "pydantic>=1.9,<2.0.0",
    "python-dateutil>=2.8.2,<2.9",
    "pyyaml>=5.3",
    "stac-validator>=3.1.0",
    "strictyaml>=1.6",
    "typing-extensions; python_version< '3.10.0'",
]

[project.optional-dependencies]
dev = [
    "pre-commit",
    "pytest",
    "pytest-cov",
]
docs = [
    "mkdocs",
    "mkdocs-material",
    "pdocs",
]

[project.urls]
Homepage = "https://github.com/Microsoft/planetary-computer-tasks"

[tool.hatch.version]
path = "pctasks/core/version.py"

[tool.hatch.build.targets.wheel]
include = [
    "/pctasks/core",
]
