[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pctasks.dev"
dynamic = ["version"]
description = "Planetary Computer Tasks framework."
readme = "README.md"
license = "MIT"
requires-python = ">=3.8"
authors = [
    { name = "Microsoft", email = "planetarycomputer@microsoft.com" },
]
keywords = [
    "Planetary",
    "STAC",
]
classifiers = [
    "Intended Audience :: Developers",
    "Intended Audience :: Information Technology",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.8",
]
dependencies = [
    "pctasks.cli @ {root:uri}/../cli",
    "pctasks.client @ {root:uri}/../client",
    "pctasks.ingest @ {root:uri}/../ingest",
    "pctasks.run @ {root:uri}/../run",
    "pctasks.task @ {root:uri}/../task",
]

[project.optional-dependencies]
server = [
    "fastapi>=0.108.0",
    "uvicorn[standard]>=0.12.0,<0.16.0",
]

[project.scripts]
pctasks-dev = "pctasks.dev.cli:cli"

[project.urls]
Homepage = "https://github.com/Microsoft/planetary-computer-tasks"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.version]
path = "pctasks/dev/version.py"

[tool.hatch.build.targets.wheel]
include = [
    "/pctasks/dev",
]
