[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pctasks.ingest"
dynamic = ["version"]
description = "Planetary Computer Tasks framework - Ingest"
readme = "README.md"
license = "MIT"
requires-python = ">=3.8"
authors = [
    { name = "Microsoft", email = "planetarycomputer@microsoft.com" },
]
keywords = [
    "Planetary",
    "STAC",
]
classifiers = [
    "Intended Audience :: Developers",
    "Intended Audience :: Information Technology",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.8",
]
dependencies = [
    "jinja2==3.0.3",
    "marko==1.0.1",
    "pctasks.client @ {root:uri}/../client",
]

[project.optional-dependencies]
dev = [
    "pre-commit",
    "pytest",
    "pytest-cov",
]
docs = [
    "mkdocs",
    "mkdocs-material",
    "pdocs",
]

[project.entry-points."pctasks.commands"]
ingest = "pctasks.ingest.cli:ingest_cmd"

[project.urls]
Homepage = "https://github.com/Microsoft/planetary-computer-tasks"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.version]
path = "pctasks/ingest/version.py"

[tool.hatch.build.targets.wheel]
include = [
    "/pctasks/ingest",
]
