[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pctasks.server"
dynamic = ["version"]
description = "Planetary Computer Tasks framework: Server."
readme = "README.md"
license = "MIT"
requires-python = ">=3.8"
authors = [
    { name = "Microsoft", email = "planetarycomputer@microsoft.com" },
]
keywords = [
    "Planetary",
    "STAC",
]
classifiers = [
    "Intended Audience :: Developers",
    "Intended Audience :: Information Technology",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.8",
]
dependencies = [
    "fastapi>=0.111.0",
    "pctasks.core @ {root:parent:uri}/core",
    "pctasks.run @ {root:parent:uri}/run",
    "python-multipart==0.0.18",
]

[project.optional-dependencies]
dev = [
    "httpx",
    "pre-commit",
    "pytest",
    "pytest-cov",
]
server = [
    "uvicorn[standard]>=0.30.0",
]

[project.urls]
Homepage = "https://github.com/Microsoft/planetary-computer-tasks"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.version]
path = "pctasks/server/version.py"

[tool.hatch.build.targets.wheel]
include = [
    "/pctasks/server",
]
